<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Navigation Drawer Example</string>
    <string name="no_program">No program</string>

    <string name="drawer_title_programs">Programs</string>
    <string name="drawer_title_other">Other</string>
    <string name="drawer_item_add">Add new program</string>
    <string name="drawer_item_settings">Settings</string>

    <string name="action_add">Add</string>
    <string name="action_add_images">Add image</string>
    <string name="action_delete">Delete</string>
    <string name="action_check">Validate</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>

    <string name="title_begin">Begin</string>
    <string name="title_manage">Manage</string>
    <string name="title_stats">Stats</string>
    <string name="title_activity_manage_program">ManageProgramActivity</string>
    <string name="name">Name</string>
    <string name="new_program">New program</string>
    <string name="action_set_name">Edit name</string>
    <string name="action_sort_exercises">Sort exercises</string>
    <string name="no_exercises">This program is empty.</string>
    <string name="no_exercises_detailed">Please add exercises to become strong and stretched.</string>
    <string name="no_sets">This exercise is empty.</string>
    <string name="no_sets_detailed">Please add sets to become strong and stretched.</string>
    <string name="no_overview">This exercise have no information.</string>
    <string name="no_overview_detailed">Please modify it to add information.</string>
    <string name="message_delete">All the data will be deleted including stats</string>
    <string name="action_delete_image">Delete image ?</string>

    <string name="edit_name">Edit name</string>
    <string name="title_activity_sort_exercises">SortExercisesActivity</string>
    <string name="title_activity_manage_exercise">ManageExerciseActivity</string>
    <string name="new_exercise">New exercise</string>

    <string name="edit_set">Edit set</string>
    <string name="action_edit">Edit</string>

    <string name="action_mode">Simple/Advanced mode</string>
    <string name="label_rep">REP</string>
    <string name="label_weight">WGT</string>
    <string name="weight_unit">kg</string>
    <string name="label_rest">RST</string>
    <string name="new_set">New set</string>
    <string name="second_unit">\'\'</string>
    <string name="minute_unit">\'</string>
    <string name="set_summary_divider">x</string>

    <string name="tab_title_exercises">Exercises</string>
    <string name="tab_title_stats">Stats</string>
    <string name="tab_title_sets">Sets</string>
    <string name="tab_title_overview">Overview</string>

    <string name="overview_description_header">Directions</string>
    <string name="overview_muscle_header">Muscles</string>
    <string name="overview_muscle_primary_header">Primary</string>
    <string name="overview_muscle_secondary_header">Auxiliary</string>
    <string name="title_activity_edit_overview">Edit exercise</string>
    <string name="new_muscle">New muscle</string>
    <string name="delete_image">Delete image</string>
    <string name="image_loading">Loading... Please wait</string>

    <string name="title_activity_run">Training</string>

    <string-array name="muscles_list">
        <item>Abdominals</item>
        <item>Arms</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Calves</item>
        <item>Chest</item>
        <item>Forearms</item>
        <item>Glutes</item>
        <item>Hamstrings</item>
        <item>Lats</item>
        <item>Legs</item>
        <item>Neck</item>
        <item>Quadriceps</item>
        <item>Shoulders</item>
        <item>Traps</item>
        <item>Triceps</item>
    </string-array>

</resources>
