<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/program_sub_menu"
            android:title="@string/drawer_title_programs">
            <menu>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/other_sub_menu"
            android:title="@string/drawer_title_other">
            <menu>
                <item
                    android:id="@+id/drawer_item_add"
                    android:checked="true"
                    android:icon="@drawable/ic_add_black"
                    android:title="@string/drawer_item_add" />
                <item
                    android:id="@+id/drawer_item_settings"
                    android:icon="@drawable/ic_settings_black_48dp"
                    android:title="@string/drawer_item_settings" />
            </menu>
        </item>
    </group>
</menu>