<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/set_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp"
    app:contentPaddingBottom="@dimen/activity_vertical_margin"
    app:contentPaddingLeft="20dp"
    app:contentPaddingRight="@dimen/activity_horizontal_margin"
    app:contentPaddingTop="20dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:id="@+id/label_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/label_rep"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/label_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:gravity="center"
            android:text="@string/label_weight"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <NumberPicker
            android:id="@+id/picker_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:gravity="center" />

        <NumberPicker
            android:id="@+id/picker_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/rest_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="false"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/label_rest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/label_rest"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </GridLayout>

</android.support.v7.widget.CardView>