<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- A CardView that contains a TextView -->

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_begin"
        android:layout_gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <TextView
            android:id="@+id/title_begin"
            android:text="@string/title_begin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:autoText="false" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_dumbbell20"
            android:id="@+id/image_card_begin" />

        <TextView
            android:padding="5dp"
            android:id="@+id/info_text"
            android:text="@string/action_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_manage"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="fill_parent"
            card_view:cardCornerRadius="4dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_manage"
                    android:text="@string/title_manage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:autoText="false" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_manage_blue"
                    android:id="@+id/image_card_manage" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_stats"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="fill_parent"
            card_view:cardCornerRadius="4dp"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title_stats"
                    android:text="@string/title_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:autoText="false" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_stats"
                    android:id="@+id/image_card_stats" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>